Upgrade to bootstrap 4, Move to ng2-bootstrap, Integrate d3.js

--- a/README
+++ b/README
@@ -9,42 +9,18 @@ There are several demonstration files available in this template.
 Controllers
 ===========
 
-- HomeController.scala:
 
-  Shows how to handle simple HTTP requests.
+NPM Support
+===========
 
-- AsyncController.scala:
+NPM support currently exists only for install typings.
 
-  Shows how to do asynchronous programming when handling a request.
+ * Add the dt reference for the relevant project in the typings.json file
+ * run 'npm install'
+ * run 'npm run typings install'
+ * delete the node_modules directory
 
-- CountController.scala:
-
-  Shows how to inject a component into a controller and use the component when
-  handling requests.
-
-Components
-==========
-
-- Module.scala:
-
-  Shows how to use Guice to bind all the components needed by your application.
-
-- Counter.scala:
-
-  An example of a component that contains state, in this case a simple counter.
-
-- ApplicationTimer.scala:
-
-  An example of a component that starts when the application starts and stops
-  when the application stops.
-
-Filters
-=======
-
-- Filters.scala:
-
-  Creates the list of HTTP filters used by your application.
-
-- ExampleFilter.scala
-
-  A simple filter that adds a header to every response.
+The step of deleting the node_modules directory is very important because,
+ * By default, the sbt play plugins will copy over the libs in the node_modules directory at the root of the project (if it exists)
+ * Currently, there does not seem to be a mechanism in sbt to ignore the node_modules dir or to configure the node_modules
+   dir when executing 'npm install' (https://github.com/npm/npm/issues/2734)
